--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
 
 <body>
     <header class="container text-center">
-        <img src="Fabricio.jpg" alt="avatar do Fabricio" class="rounded-circle" width="150" height="150" srcset="">
-        <p class="lead">Eu sou o Prof. Fabricio</p>
-        <h1>... sou Professor</h1>
+        <img src="Diego.jpg" alt="avatar do Diego" class="rounded-circle" width="150" height="150" srcset="">
+        <p class="lead">Eu sou o Diego Forggia</p>
+        <h1>... sou aluno</h1>
 
         
       
 
-        <p>Fui analista em empresas e hoje sou professor. Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio usando linguagens como HTML, CSS, Bootstrap, JavaScript e outras. ISSO É UM MODELO PARA SER PERSONALIZADO </p>
+        <p>Sou estudante da escola Eugênia Vilhena no 2°ano E.M. </p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
@@ -35,10 +34,13 @@
                 <div class="card" style="width: 18rem;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Projeto 1, etc...</h5>
-                      <p class="card-text">Informações sobre o primeiro projeto </p>
+                      <h5 class="card-title">Lógica de programação: criando arte interativa com P5.js</h5>
+                      <p class="card-text">Descubra como combinar arte e programação de forma criativa.
+Aprenda a utilizar P5.js para criar projetos interativos e visuais.
+Aplique conceitos matemáticos, como o teorema de Pitágoras, em projetos de arte digital.
+Desafie-se a recriar a brincadeira "quente e frio" utilizando programação interativa.</p>
                       <a href="#" class="btn btn-primary">Go somewhere</a>
-					   <img src="ideias.jpeg" alt="avatar do Fabricio" class="rounded-circle" width="150" height="150" srcset="">
+					   <img src="ideias.jpeg" alt="avatar do Diego" class="rounded-circle" width="150" height="150" srcset="">
                     </div>
                   </div>
 
