--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <header class="container text-center">
         <img src="Diego.jpg" alt="avatar do Diego" class="rounded-circle" width="150" height="150" srcset="">
-        <p class="lead">Eu sou o Diego Forggia</p>
-        <h1>... sou aluno</h1>
+        <h1 class="lead">Eu sou o Diego Forggia</h1>
+        <p>Eu Aluno</p>
 
         
       
@@ -46,10 +46,14 @@ Desafie-se a recriar a brincadeira "quente e frio" utilizando programação inte
 
                   <div class="card" style="width: 18rem;">
                     <div class="card-body">
-                      <h5 class="card-title">Projeto 2, etc...</h5>
-                      <p class="card-text">Informações sobre o segundo projeto .</p>
+                      <h5 class="card-title">Listas, funções e repetição: criando um jogo de corrida (pt. 2)</h5>
+                      <p class="card-text">Criar jogos interativos com controle por teclado
+Adicionar múltiplos jogadores no jogo
+Detectar quem venceu a corrida
+Usar repetições para criar movimentos contínuos
+Modularizar o código em funções</p>
                       <a href="#" class="btn btn-primary">Go somewhere</a>
-					  <img src="educa.jpg" alt="avatar do Fabricio" class="rounded-circle" width="150" height="150" srcset="">
+					  <img src="educa.jpg" alt="avatar do Diego" class="rounded-circle" width="150" height="150" srcset="">
                     </div>
                   </div>
             </div>
